Ingress/ingress-file.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata: 
  name: myapp-ingress
spec:
  rules:
  - host: myapp.com
    http:
      paths:
      - backend:
          serviceName: myapp-internal-service
          servicePort: 8080                        ## should be similar to port in service yaml file


## myapp-internal-service will look something like below
apiVersion: v1
kind: Service
metadata:
  name: myapp-internal-service
spec:
  selector:
    app: myapp
  ports:
    - protocol: TCP
      port: 8080    
      targetPort: 8080
